--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <a href="#sun_title">SMALL PLEASURES</a>
 
         </h1>
-
+        <video autoplay muted loop id="myVideo" class="myvideo">
+            <source src="images/sky.mp4" type="video/mp4">
+          </video>
         <ul class="header-title">
             <li id="sun_title" class="sun_title">
                 <a href="#sun" class="big-link-title">Sun</a>
@@ -32,6 +34,7 @@
                 <a href="#The_fish_shop" class="big-link-title">The fish shop</a>
 
             </li>
+            <p class="opening">Three articles, accompanied by art and brief intriguing facts, describe contentment in the simple joys of life.</p>
 
         </ul>
     </header>
@@ -85,11 +88,11 @@
             <div class="facts-sun1">
                 <ul class="facts-sun">
                     <li>
-                        <p><b>1.</b><br> The sun is the closest star to our planet, which is why we see the sun so big and bright.</p>
+                        <p><b>*</b><br> The sun is the closest star to our planet, which is why we see the sun so big and bright.</p>
                     </li>
 
                     <li>
-                        <p><b>2.</b><br>No matter when or where we look at the sun, we will always see something interesting. Scientists observe these changes by watching the sunspots, which increase and decrease about every 10 years.</p>
+                        <p><b>*</b><br>No matter when or where we look at the sun, we will always see something interesting. Scientists observe these changes by watching the sunspots, which increase and decrease about every 10 years.</p>
                     </li>
                 </ul>
             </div>
@@ -116,10 +119,10 @@
         <div class="facts-sun2">
             <ul class="facts-sun-2">
                 <li>
-                    <p><b>3.</b><br>Like the Earth, the sun has layers. But unlike the Earth, the sun is entirely gaseous; there is no solid surface.</p>
+                    <p><b>*</b><br>Like the Earth, the sun has layers. But unlike the Earth, the sun is entirely gaseous; there is no solid surface.</p>
                 </li>
                 <li>
-                    <p><b>4.</b><br>The Sun is almost a perfect sphere.</p>
+                    <p><b>*</b><br>The Sun is almost a perfect sphere.</p>
                 </li>
             </ul>
         </div>
@@ -153,7 +156,7 @@
 
         <div class="facts-sun3">
             <ul class="facts-sun-3">
-                <li><b>5.</b><br>One day the Sun will consume the Earth.</li>
+                <li><b>*</b><br>One day the Sun will consume the Earth.</li>
             </ul>
         </div>
     </div>
@@ -220,11 +223,11 @@
             <div class="facts-sun1 facts-figs1">
                 <ul class="facts-sun facts-figs">
                     <li>
-                        <p><b>1.</b><br> Fig trees have no blossoms on their branches. The blossom is inside of the fruit</p>
+                        <p><b>*</b><br> Fig trees have no blossoms on their branches. The blossom is inside of the fruit</p>
                     </li>
 
                     <li>
-                        <p><b>2.</b><br>Many believe it was figs that were actually the fruit in the Garden of Eden with Adam and Eve, not apples.</p>
+                        <p><b>*</b><br>Many believe it was figs that were actually the fruit in the Garden of Eden with Adam and Eve, not apples.</p>
                     </li>
                 </ul>
             </div>
@@ -257,10 +260,10 @@
         <div class="facts-sun2 facts-figs2">
             <ul class="facts-sun-2 facts-figs-2">
                 <li>
-                    <p><b>3.</b><br>The early Olympic athletes used figs as a training food. Figs were also presented as laurels to the winners, becoming the first Olympic “medal.”</p>
+                    <p><b>*</b><br>The early Olympic athletes used figs as a training food. Figs were also presented as laurels to the winners, becoming the first Olympic “medal.”</p>
                 </li>
                 <li>
-                    <p><b>4.</b><br>The fig tree is a symbol of abundance, fertility and sweetness.</p>
+                    <p><b>*</b><br>The fig tree is a symbol of abundance, fertility and sweetness.</p>
                 </li>
             </ul>
         </div>
@@ -296,7 +299,7 @@
 
         <div class="facts-sun3 facts-figs3">
             <ul class="facts-sun-3 facts-figs-3">
-                <li><b>5.</b><br>Figs are harvested according to nature’s clock, fully ripened and partially dried on the tree.</li>
+                <li><b>*</b><br>Figs are harvested according to nature’s clock, fully ripened and partially dried on the tree.</li>
             </ul>
         </div>
     </div>
@@ -369,11 +372,11 @@
             <div class="facts-sun1 facts-figs1 facts-fish1">
                 <ul class="facts-sun facts-figs facts-fish">
                     <li>
-                        <p><b>1.</b><br> The biggest fish on the planet is a whale shark.</p>
+                        <p><b>*</b><br> The biggest fish on the planet is a whale shark.</p>
                     </li>
 
                     <li>
-                        <p><b>2.</b><br>American Lobsters have longer life spans than both cats and dogs, living over 20 years.</p>
+                        <p><b>*</b><br>American Lobsters have longer life spans than both cats and dogs, living over 20 years.</p>
                     </li>
                 </ul>
             </div>
@@ -402,10 +405,10 @@
         <div class="facts-sun2 facts-figs2 facts-fish3">
             <ul class="facts-sun-2 facts-figs-2 facts-fish-2">
                 <li>
-                    <p><b>3.</b><br>fish can get sunburn, but it is unusual unless there is something about their environment that does not allow them to seek deeper water or some kind of shelter.</p>
+                    <p><b>*</b><br>fish can get sunburn, but it is unusual unless there is something about their environment that does not allow them to seek deeper water or some kind of shelter.</p>
                 </li>
                 <li>
-                    <p><b>4.</b><br>the Antarctic ice fish, which have antifreeze in their blood, live permanently at -1°C.</p>
+                    <p><b>*</b><br>the Antarctic ice fish, which have antifreeze in their blood, live permanently at -1°C.</p>
                 </li>
             </ul>
         </div>
@@ -418,7 +421,7 @@
     </div>
     <div class="flexbox-3">
         <div class="article-sun-3 article-figs-3 article-fish-3">
-            <p class="big">but if one took slightly more care around eating, even if lots of bits of one’s life were bad, if one could come in here and get some sole wrapped up by the man in the blue apron and go home, and take the art of living more seriously, then
+            <p class="big">But if one took slightly more care around eating, even if lots of bits of one’s life were bad, if one could come in here and get some sole wrapped up by the man in the blue apron and go home, and take the art of living more seriously, then
                 one would be closer to being the person one should always have been.</p>
             </p>
             <p>Visiting the fishmonger leads one to sketch little plans of moral reform: in another, slightly better, life, one would go there all the time. We’d become adept at preparing certain dishes. Being here, one makes fleeting, initial contact with
@@ -431,7 +434,7 @@
 
         <div class="facts-sun3 facts-figs3 facts-fish3">
             <ul class="facts-sun-3 facts-figs-3 facts-fish-3">
-                <li><b>5.</b><br>Catfish have over 27,000 taste buds, whereas humans have only 9,000.</li>
+                <li><b>*</b><br>Catfish have over 27,000 taste buds, whereas humans have only 9,000.</li>
             </ul>
         </div>
     </div>
@@ -439,6 +442,7 @@
     </div>
     </body>
     <footer>
+
         <div class="marquee">
             <div class="marquee-inner">
                 <span>Sun</span>
