--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <h1 class="topbar">
-            <a href="#sun_title">SMALL PLEASURES</a>
+            <a href="#sun_title">Small Pleasures</a>
 
         </h1>
         <video autoplay muted loop id="myVideo" class="myvideo">
