--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <li class="figs_title">
                 <a href="#figs" class="big-link-title">Figs</a>
 
+
             </li>
             <li class="fish_title">
                 <a href="#The_fish_shop" class="big-link-title">The fish shop</a>
@@ -500,6 +501,7 @@
                 <span>The Fish Shop</span>
                 <span>The Fish Shop</span>
             </div>
+            <script src="revealer.js"></script>
         </div>
 
 
