--- a/index.html
+++ b/index.html
@@ -1,42 +1,37 @@
 <html>
 
 <head>
-    <title>SMALL PLEASURES</title>
+    <title>Small Pleasures</title>
     <link rel="shortcut icon" href="images/gem.png" type="image/x-icon">
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,300;1,600&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,600;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@400;500&family=Cormorant+Garamond:ital,wght@0,400;1,300;1,400;1,600;1,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
+        <div id="video">
+            <video autoplay muted loop id="myVideo" class="myvideo">
+            <source src="images/darkshadow (1).mp4" type="video/mp4">
+          </video>
+        </div>
         <h1 class="topbar">
             <a href="#sun_title">Small Pleasures</a>
-
         </h1>
-        <video autoplay muted loop id="myVideo" class="myvideo">
-            <source src="images/sky.mp4" type="video/mp4">
-          </video>
         <ul class="header-title">
             <li id="sun_title" class="sun_title">
                 <a href="#sun" class="big-link-title">Sun</a>
             </li>
             <li class="figs_title">
                 <a href="#figs" class="big-link-title">Figs</a>
-
-
             </li>
             <li class="fish_title">
                 <a href="#The_fish_shop" class="big-link-title">The fish shop</a>
-
             </li>
-            <p class="opening">Three articles, accompanied by art and brief intriguing facts, describe contentment in the simple joys of life.</p>
         </ul>
+        <p class="opening">Three articles, accompanied by art and brief intriguing facts, describe contentment in the simple joys of life.</p>
     </header>
     <div class="marquee">
         <div class="marquee-inner">
