--- a/index.html
+++ b/index.html
@@ -498,6 +498,7 @@
             </div>
             <script src="revealer.js"></script>
         </div>
+        <p class="credit"> Articles taken from <a href="https://www.theschooloflife.com/">"the school of life"</a> </p>
 
 
 
