--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 
 <body>
     <header>
-        <div id="video">
+        <!--  <div id="video">
             <video autoplay muted loop id="myVideo" class="myvideo">
             <source src="images/darkshadow (1).mp4" type="video/mp4">
-          </video>
+          </video>-->
+        <div><img class="headerimg" src="images/Michelangelo,_Creation_of_the_Sun,_Moon,_and_Plants_01.jpg"></div>
         </div>
         <h1 class="topbar">
             <a href="#sun_title">Small Pleasures</a>
