--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <video autoplay muted loop id="myVideo" class="myvideo">
             <source src="images/darkshadow (1).mp4" type="video/mp4">
           </video>-->
-        <div><img class="headerimg" src="images/Michelangelo,_Creation_of_the_Sun,_Moon,_and_Plants_01.jpg"></div>
+        <div><img class="headerimg" src="images/Banquet_Still_Life,_Adriaen_van_Utrecht,_1644_-_Rijksmuseum.jpg"></div>
         </div>
         <h1 class="topbar">
             <a href="#sun_title">Small Pleasures</a>
