--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
             <video autoplay muted loop id="myVideo" class="myvideo">
             <source src="images/darkshadow (1).mp4" type="video/mp4">
           </video>-->
-        <div><img class="headerimg" src="images/Banquet_Still_Life,_Adriaen_van_Utrecht,_1644_-_Rijksmuseum.jpg"></div>
         </div>
         <h1 class="topbar">
             <a href="#sun_title">Small Pleasures</a>
@@ -33,33 +32,34 @@
             </li>
         </ul>
         <p class="opening">Three articles, accompanied by art and brief intriguing facts, describe contentment in the simple joys of life.</p>
-    </header>
-    <div class="marquee">
-        <div class="marquee-inner">
-            <span>Sun</span>
-            <span>Sun</span>
-            <span>Sun</span>
-            <span>Sun</span>
-            <span>Sun</span>
-            <span>Sun</span>
-            <span>Sun</span>
-            <span>Sun</span>
-            <span>Sun</span>
-            <span>Sun</span>
-            <span>Sun</span>
-            <span>Sun</span>
-            <span>Sun</span>
-            <span>Sun</span>
-            <span>Sun</span>
-            <span>Sun</span>
+        <div class="marquee">
+            <div class="marquee-inner">
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
+                <span>Sun</span>
 
 
 
 
 
 
+            </div>
         </div>
-    </div>
+
+    </header>
 
 
     <div class="content">
@@ -84,11 +84,11 @@
             <div class="facts-sun1">
                 <ul class="facts-sun">
                     <li>
-                        <p><b>*</b><br> The sun is the closest star to our planet, which is why we see the sun so big and bright.</p>
+                        <p> The sun is the closest star to our planet, which is why we see the sun so big and bright.</p>
                     </li>
 
                     <li>
-                        <p><b>*</b><br>No matter when or where we look at the sun, we will always see something interesting. Scientists observe these changes by watching the sunspots, which increase and decrease about every 10 years.</p>
+                        <p>No matter when or where we look at the sun, we will always see something interesting. Scientists observe these changes by watching the sunspots, which increase and decrease about every 10 years.</p>
                     </li>
                 </ul>
             </div>
@@ -115,10 +115,10 @@
         <div class="facts-sun2">
             <ul class="facts-sun-2">
                 <li>
-                    <p><b>*</b><br>Like the Earth, the sun has layers. But unlike the Earth, the sun is entirely gaseous; there is no solid surface.</p>
+                    <p>Like the Earth, the sun has layers. But unlike the Earth, the sun is entirely gaseous; there is no solid surface.</p>
                 </li>
                 <li>
-                    <p><b>*</b><br>The Sun is almost a perfect sphere.</p>
+                    <p>The Sun is almost a perfect sphere.</p>
                 </li>
             </ul>
         </div>
@@ -152,8 +152,7 @@
 
         <div class="facts-sun3">
             <ul class="facts-sun-3">
-                <li><b>*</b><br>One day the Sun will consume the Earth.</li>
-            </ul>
+                <li><b>*</b><br>
         </div>
     </div>
     </div>
@@ -219,11 +218,11 @@
             <div class="facts-sun1 facts-figs1">
                 <ul class="facts-sun facts-figs">
                     <li>
-                        <p><b>*</b><br> Fig trees have no blossoms on their branches. The blossom is inside of the fruit</p>
+                        <p> Fig trees have no blossoms on their branches. The blossom is inside of the fruit</p>
                     </li>
 
                     <li>
-                        <p><b>*</b><br>Many believe it was figs that were actually the fruit in the Garden of Eden with Adam and Eve, not apples.</p>
+                        <p>Many believe it was figs that were actually the fruit in the Garden of Eden with Adam and Eve, not apples.</p>
                     </li>
                 </ul>
             </div>
@@ -256,10 +255,10 @@
         <div class="facts-sun2 facts-figs2">
             <ul class="facts-sun-2 facts-figs-2">
                 <li>
-                    <p><b>*</b><br>The early Olympic athletes used figs as a training food. Figs were also presented as laurels to the winners, becoming the first Olympic “medal.”</p>
+                    <p>The early Olympic athletes used figs as a training food. Figs were also presented as laurels to the winners, becoming the first Olympic “medal.”</p>
                 </li>
                 <li>
-                    <p><b>*</b><br>The fig tree is a symbol of abundance, fertility and sweetness.</p>
+                    <p>The fig tree is a symbol of abundance, fertility and sweetness.</p>
                 </li>
             </ul>
         </div>
@@ -295,7 +294,7 @@
 
         <div class="facts-sun3 facts-figs3">
             <ul class="facts-sun-3 facts-figs-3">
-                <li><b>*</b><br>Figs are harvested according to nature’s clock, fully ripened and partially dried on the tree.</li>
+                <li>Figs are harvested according to nature’s clock, fully ripened and partially dried on the tree.</li>
             </ul>
         </div>
     </div>
@@ -368,11 +367,11 @@
             <div class="facts-sun1 facts-figs1 facts-fish1">
                 <ul class="facts-sun facts-figs facts-fish">
                     <li>
-                        <p><b>*</b><br> The biggest fish on the planet is a whale shark.</p>
+                        <p> The biggest fish on the planet is a whale shark.</p>
                     </li>
 
                     <li>
-                        <p><b>*</b><br>American Lobsters have longer life spans than both cats and dogs, living over 20 years.</p>
+                        <p>American Lobsters have longer life spans than both cats and dogs, living over 20 years.</p>
                     </li>
                 </ul>
             </div>
@@ -401,10 +400,10 @@
         <div class="facts-sun2 facts-figs2 facts-fish3">
             <ul class="facts-sun-2 facts-figs-2 facts-fish-2">
                 <li>
-                    <p><b>*</b><br>fish can get sunburn, but it is unusual unless there is something about their environment that does not allow them to seek deeper water or some kind of shelter.</p>
+                    <p>fish can get sunburn, but it is unusual unless there is something about their environment that does not allow them to seek deeper water or some kind of shelter.</p>
                 </li>
                 <li>
-                    <p><b>*</b><br>the Antarctic ice fish, which have antifreeze in their blood, live permanently at -1°C.</p>
+                    <p>the Antarctic ice fish, which have antifreeze in their blood, live permanently at -1°C.</p>
                 </li>
             </ul>
         </div>
