--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
 
         <div class="facts-sun3">
             <ul class="facts-sun-3">
-                <li><b>*</b><br>
+                <li>one day the sun will consume the earth
+                    <li>
         </div>
     </div>
     </div>
@@ -429,7 +430,7 @@
 
         <div class="facts-sun3 facts-figs3 facts-fish3">
             <ul class="facts-sun-3 facts-figs-3 facts-fish-3">
-                <li><b>*</b><br>Catfish have over 27,000 taste buds, whereas humans have only 9,000.</li>
+                <li>Catfish have over 27,000 taste buds, whereas humans have only 9,000.</li>
             </ul>
         </div>
     </div>
